--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,27 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="title" content="portfolio" />
+    <meta name="description" content="이동현의 포트폴리오 사이트입니다." />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Keywords"
+      content="portfolio, 이동현, 포트폴리오, 포트폴리오 사이트, LeeDongHyeon, 대마고, 대덕소프트웨어마이스터고등학교, 대마고이동현, 대마고7기"
     />
+    <meta http-equiv="Reply-To" content="ldh7228@gmail.com" />
+    <meta http-equiv="Email" content="ldh7228@gmail.com" />
+    <meta
+      http-equiv="Page-Enter"
+      content="revealtrans(Duration=1,Transition=12)"
+    />
+    <meta name="author" content="이동현" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Subject" content="포트폴리오 사이트" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#121212" />
+    <meta http-equiv="site-enter" content="BlendTrans(Duration=0.5)" />
+    <meta http-equiv="site-exit" content="BlendTrans(Duration=0.5)" />
+    <meta http-equiv="page-enter" content="BlendTrans(Duration=0.5)" />
+    <meta http-equiv="page-exit" content="BlendTrans(Duration=0.5)" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -32,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>LeeDongHyeon's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
