--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="title" content="portfolio" />
     <meta name="description" content="이동현의 포트폴리오 사이트입니다." />
     <meta
@@ -24,7 +24,7 @@
     <meta http-equiv="site-exit" content="BlendTrans(Duration=0.5)" />
     <meta http-equiv="page-enter" content="BlendTrans(Duration=0.5)" />
     <meta http-equiv="page-exit" content="BlendTrans(Duration=0.5)" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
