--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,7 @@
     <meta http-equiv="Subject" content="포트폴리오 사이트" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#121212" />
-    <meta http-equiv="site-enter" content="BlendTrans(Duration=0.5)" />
-    <meta http-equiv="site-exit" content="BlendTrans(Duration=0.5)" />
-    <meta http-equiv="page-enter" content="BlendTrans(Duration=0.5)" />
-    <meta http-equiv="page-exit" content="BlendTrans(Duration=0.5)" />
+    <meta http-equiv="Refresh" content="20" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
