--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,6 @@
     />
     <meta http-equiv="Reply-To" content="ldh7228@gmail.com" />
     <meta http-equiv="Email" content="ldh7228@gmail.com" />
-    <meta
-      http-equiv="Page-Enter"
-      content="revealtrans(Duration=1,Transition=12)"
-    />
     <meta name="author" content="이동현" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Subject" content="포트폴리오 사이트" />
@@ -31,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jua&family=Black+Han+Sans&family=Corben:wght@700&family=Quicksand:wght@700&family=Do+Hyeon&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic:wght@700&family=Jua&family=Black+Han+Sans&family=Corben:wght@700&family=Quicksand:wght@700&family=Do+Hyeon&display=swap"
       rel="stylesheet"
     />
     <!--
